--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
         const finishedContentRef = useRef(null);
 
         const fetchBookings = () => {
-          fetch('https://touchdeprived-2025-05-05.loca.lt/bookings')
+          fetch('https://sad-poems-kick.loca.lt/bookings')
             .then((response) => response.json())
             .then((data) => {
               const processedBookings = data.map(booking => {
