--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
     <title>Bookings Dashboard</title>
     <style>
       body {
@@ -13,10 +16,106 @@
       #root {
         height: 100vh;
       }
+      /* Default styles for the dashboard container and sections */
+      .dashboard-container {
+        display: flex;
+        height: 100vh;
+        overflow: hidden;
+        background: linear-gradient(90deg, #0f0c29, #302b63, #24243e);
+        position: relative;
+      }
+      .left-section {
+        flex: 4;
+        padding: 20px;
+        overflow-y: auto;
+        position: relative;
+        z-index: 1000;
+      }
+      .right-section {
+        flex: 1;
+        padding: 20px;
+        border-left: 2px solid white;
+        overflow: hidden;
+        position: relative;
+        z-index: 1000;
+      }
+      .dashboard-logo {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        height: auto;
+        width: 50%;
+        z-index: 900;
+        opacity: 0.1;
+      }
+      /* BookingCard default style */
+      .booking-card {
+        background: linear-gradient(45deg, #74ebd5, #acb6e5);
+        border-radius: 12px;
+        padding: 20px;
+        margin: 20px;
+        width: 250px;
+        font-size: 22px;
+        position: relative;
+        box-shadow: inset 0 0 20px rgba(0, 0, 0, 0.9);
+        overflow: hidden;
+        border: 1px solid white;
+        z-index: 1000;
+      }
+      /* Heading style */
+      .heading {
+        font-size: 28px;
+        margin-bottom: 20px;
+        color: white;
+      }
+      
+      /* Mobile-specific styles (applied only on mobile aspect ratios) */
+      @media only screen and (max-width: 768px) {
+        .dashboard-container {
+          flex-direction: column !important;
+        }
+  
+        /* Move logo to the top */
+        .dashboard-logo {
+          position: static !important;
+          transform: none;
+          width: 80%;
+          margin: 20px auto;
+          display: block;
+        }
+  
+        /* Adjust BookingCard styling in mobile */
+        .booking-card {
+          width: 70vw !important;       /* 90% of the viewport width */
+          margin: 10px auto !important;   /* Center the card and add vertical spacing */
+          display: block !important;      /* Stack cards vertically */
+        }
+  
+        /* Adjust sections for mobile */
+
+        .right-section {
+          border: none !important;
+          width: 100%;
+        }
+  
+        /* Remove undesired text elements in mobile mode */
+        .progress-heading,
+        .finished-heading,
+        .no-finished-text {
+          display: none !important;
+        }
+      }
     </style>
     <!-- Include React and ReactDOM from CDN -->
-    <script crossorigin src="https://unpkg.com/react@17/umd/react.development.js"></script>
-    <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
+    <script
+      crossorigin
+      src="https://unpkg.com/react@17/umd/react.development.js"
+    ></script>
+    <script
+      crossorigin
+      src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"
+    ></script>
     <!-- Include Babel for JSX transformation -->
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   </head>
@@ -170,6 +269,7 @@
         const serviceName = booking.service_name && booking.service_name.trim() ? booking.service_name : "NIL";
         const bookingDescription = booking.booking_description && booking.booking_description.trim() ? booking.booking_description : "NIL";
   
+        // Default card styles (inline) for desktop
         const cardStyle = {
           background: 'linear-gradient(45deg, #74ebd5, #acb6e5)',
           borderRadius: '12px',
@@ -185,7 +285,7 @@
         };
   
         return (
-          <div style={cardStyle}>
+          <div className="booking-card" style={cardStyle}>
             <div style={{ fontWeight: 'bold', fontSize: '48px', marginBottom: '10px' }}>
               {firstName} {lastInitial}
             </div>
@@ -215,7 +315,7 @@
           fetch('https://silent-papers-unite.loca.lt/bookings')
             .then((response) => response.json())
             .then((data) => {
-              // First, process each booking to calculate countdown, totalTime etc.
+              // Process each booking to calculate countdown, totalTime, etc.
               const processedBookings = data.map(booking => {
                 const now = new Date();
                 const scheduledTime = new Date(booking.booking_date_start_tz);
@@ -250,7 +350,6 @@
               Object.keys(bookingsByHash).forEach(hash => {
                 const group = bookingsByHash[hash];
                 if (group.some(b => b.booking_status === 'Cancelled')) {
-                  // Skip the entire group if any booking is Cancelled.
                   return;
                 }
                 filteredBookings.push(...group);
@@ -281,54 +380,11 @@
           return now >= finishTime && (now - finishTime) < 3600000;
         });
   
-        const containerStyle = {
-          fontFamily: 'Arial, sans-serif',
-          display: 'flex',
-          height: '100vh',
-          overflow: 'hidden',
-          background: 'linear-gradient(90deg, #0f0c29, #302b63, #24243e)',
-          position: 'relative'
-        };
-  
-        const logoStyle = {
-          position: 'absolute',
-          top: '50%',
-          left: '50%',
-          transform: 'translate(-50%, -50%)',
-          height: 'auto',
-          width: '50%',
-          zIndex: 900,
-          opacity: 0.1
-        };
-  
-        const leftSectionStyle = {
-          flex: 4,
-          padding: '20px',
-          overflowY: 'auto',
-          position: 'relative',
-          zIndex: 1000
-        };
-  
-        const rightSectionStyle = {
-          flex: 1,
-          padding: '20px',
-          borderLeft: '2px solid white',
-          overflow: 'hidden',
-          position: 'relative',
-          zIndex: 1000
-        };
-  
-        const headingStyle = {
-          fontSize: '28px',
-          marginBottom: '20px',
-          color: 'white'
-        };
-  
         return (
-          <div style={containerStyle}>
-            <img src="https://files.catbox.moe/4y7toq.png" alt="Logo" style={logoStyle} />
-            <div style={leftSectionStyle}>
-              <h2 style={headingStyle}>Bookings In Progress</h2>
+          <div className="dashboard-container">
+            <img src="https://files.catbox.moe/4y7toq.png" alt="Logo" className="dashboard-logo" />
+            <div className="left-section">
+              <h2 className="progress-heading heading">Bookings In Progress</h2>
               <div style={{ display: 'flex', flexWrap: 'wrap' }}>
                 {inProgressBookings.map(booking => (
                   <BookingCard 
@@ -338,8 +394,8 @@
                 ))}
               </div>
             </div>
-            <div style={rightSectionStyle}>
-              <h2 style={headingStyle}>Finished Bookings</h2>
+            <div className="right-section">
+              <h2 className="finished-heading heading">Finished Bookings</h2>
               <div ref={finishedContentRef} style={{ display: 'flex', flexDirection: 'column', gap: '20px' }}>
                 {finishedBookings.length ? (
                   finishedBookings.map(booking => (
@@ -349,7 +405,7 @@
                     />
                   ))
                 ) : (
-                  <p style={{ color: 'white', fontSize: '24px' }}>
+                  <p className="no-finished-text" style={{ color: 'white', fontSize: '24px' }}>
                     No finished bookings available
                   </p>
                 )}
