--- a/index.html
+++ b/index.html
@@ -75,6 +75,13 @@
         .dashboard-container {
           flex-direction: column !important;
         }
+        .dashboard-container {
+        display: flex;
+        height: 120vh;
+        overflow: hidden;
+        background: linear-gradient(90deg, #0f0c29, #302b63, #24243e);
+        position: relative;
+      }
   
         /* Move logo to the top */
         .dashboard-logo {
