--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       }
       /* BookingCard default style */
       .booking-card {
-        background: linear-gradient(45deg, #74ebd5, #acb6e5);
+        background: linear-gradient(45deg, #624a2e, #4f2e1e);
         border-radius: 12px;
         padding: 20px;
         margin: 20px;
