--- a/index.html
+++ b/index.html
@@ -278,18 +278,18 @@
         const computedFontSize = Math.min(48, Math.max(24, estimatedFontSize));
   
         const cardStyle = {
-          background: 'linear-gradient(45deg, #74ebd5, #acb6e5)',
-          borderRadius: '12px',
-          padding: '20px',
-          margin: '20px',
-          width: `${cardWidth}px`,
-          fontSize: '22px',
-          position: 'relative',
-          boxShadow: 'inset 0 0 20px rgba(0, 0, 0, 0.9)',
-          overflow: 'hidden',
-          border: '1px solid white',
-          zIndex: 1000
-        };
+  background: 'linear-gradient(45deg, #624a2e, #4f2e1e)',
+  borderRadius: '12px',
+  padding: '20px',
+  margin: '20px',
+  width: `${cardWidth}px`,
+  fontSize: '22px',
+  position: 'relative',
+  boxShadow: 'inset 0 0 20px rgba(0, 0, 0, 0.9)',
+  overflow: 'hidden',
+  border: '1px solid white',
+  zIndex: 1000
+};
   
         return (
           <div className="booking-card" style={cardStyle}>
