--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         position: relative;
         box-shadow: inset 0 0 20px rgba(0, 0, 0, 0.9);
         overflow: hidden;
-        border: 1px solid white;
+        border: 1px solid black;
         z-index: 1000;
       }
       /* Heading style */
