--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
   position: 'relative',
   boxShadow: 'inset 0 0 20px rgba(0, 0, 0, 0.9)',
   overflow: 'hidden',
-  border: '1px solid black',
+  border: '1px solid white',
   zIndex: 1000
 };
   
