--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         height: 100%;
         font-family: Arial, sans-serif;
         overflow: hidden;
-        background: linear-gradient(90deg, #08172e);
+        background: (#08172e);
       }
       
       /* Ensure the root element spans the full height */
