--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         height: 100%;
         font-family: Arial, sans-serif;
         overflow: hidden;
-        background: (#08172e);
+        background: linear-gradient(90deg, #0f0c29, #302b63, #24243e);
       }
       
       /* Ensure the root element spans the full height */
